# django-msgraphbackend

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/msgraphbackend/: __init__.py
